--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,9 +1,15 @@
+body {
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+}
+
 .App {
   text-align: center;
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
+  animation: loading infinite 2s linear;
   height: 80px;
 }
 
@@ -18,7 +24,7 @@
   font-size: large;
 }
 
-@keyframes App-logo-spin {
+@keyframes loading {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
