--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,6 +1,13 @@
+html {
+  height:100%;
+  width:100%;
+}
+
 body {
   margin: 0;
   padding: 0;
+  height: 100%;
+  width:100%;
   font-family: sans-serif;
 }
 
@@ -27,4 +34,43 @@ body {
 @keyframes loading {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
+}
+
+.nav {
+  width: 100%;
+  height: 60px;
+  -webkit-box-shadow: 0px 2px 7px 0px rgba(0,0,0,0.75);
+  -moz-box-shadow: 0px 2px 7px 0px rgba(0,0,0,0.75);
+  box-shadow: 0px 2px 7px 0px rgba(0,0,0,0.75);
+}
+
+.nav-title {
+  display: inline;
+  margin: 0;
+  margin-left: 20px;
+  padding: 0;
+  font-size: 30px;
+  line-height: 60px;
+}
+
+.nav-title-span {
+  font-size: 20px;
+  line-height: 60px;
+  font-style: italic;
+}
+
+.nav ul {
+  float: right;
+  height:60px;
+  display: inline-block;
+  list-style-type: none;
+  margin: 0;
+  margin-right:20px;
+  padding: 0;
+}
+
+.nav ul li {
+  display: inline;
+  line-height:60px;
+  margin-left:20px;
 }
